# solvela-client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release-crates.yml
crates/rustyclaw-client/: Cargo.toml
crates/rustyclaw-client/src/: balance.rs  cache.rs  client.rs  config.rs  error.rs  lib.rs  quality.rs  session.rs  signer.rs  wallet.rs
crates/rustyclaw-client/tests/: integration.rs
crates/rustyclawclient-cli/: Cargo.toml
crates/rustyclawclient-cli-args/: Cargo.toml
crates/rustyclawclient-cli-args/src/: lib.rs
crates/rustyclawclient-cli/src/: main.rs
crates/rustyclawclient-cli/src/commands/: chat.rs  doctor.rs  models.rs  wallet.rs
crates/rustyclawclient-proxy/: Cargo.toml
crates/rustyclawclient-proxy/src/: main.rs  proxy.rs
crates/rustyclawclient-proxy/tests/: integration.rs
crates/solvela-client/: Cargo.toml
crates/solvela-client-cli/: Cargo.toml
crates/solvela-client-cli-args/: Cargo.toml
crates/solvela-client-cli-args/src/: lib.rs
crates/solvela-client-cli/src/: main.rs
crates/solvela-client-cli/src/commands/: chat.rs  doctor.rs  mod.rs  models.rs  wallet.rs
crates/solvela-client-proxy/: Cargo.toml
crates/solvela-client-proxy/src/: lib.rs  main.rs  proxy.rs
crates/solvela-client-proxy/tests/: integration.rs
crates/solvela-client/src/: balance.rs  cache.rs  client.rs  config.rs  error.rs  lib.rs  quality.rs  session.rs  signer.rs  wallet.rs
crates/solvela-client/tests/: integration.rs
