[workspace]
resolver = "2"
members = [
    "crates/solvela-client",
    "crates/solvela-client-cli",
    "crates/solvela-client-cli-args",
    "crates/solvela-client-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/solvela-ai/solvela-client"
authors = ["Solvela Contributors"]
homepage = "https://solvela.ai"
keywords = ["solana", "x402", "usdc", "payments", "llm"]

[workspace.dependencies]
# Protocol
solvela-protocol = { path = "../solvela/crates/protocol" }

# Solana
solana-sdk = "2.2"
solana-client = "2.2"
spl-token = "7"
spl-associated-token-account = "5"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = "2"
bip39 = { version = "2", features = ["rand"] }
bincode = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP server (proxy)
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"

# Tracing subscriber (binary only)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Security
zeroize = "1"
dirs-next = "2"
lru = "0.12"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
