[package]
name = "rustyclaw-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana-native AI agent payment client for RustyClawRouter"

[dependencies]
rustyclaw-protocol = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bip39 = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest-eventsource = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
solana-sdk = { workspace = true }

[lints]
workspace = true
