[package]
name = "rustyclawclient-cli-args"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared CLI argument structs and wallet loading for RustyClawClient binaries"

[dependencies]
clap = { workspace = true }
rustyclaw-client = { path = "../rustyclaw-client" }
dirs-next = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
solana-sdk = { workspace = true }

[lints]
workspace = true
