[package]
name = "rustyclawclient-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rcc — RustyClawClient CLI for Solana-paid AI from your terminal"

[[bin]]
name = "rcc"
path = "src/main.rs"

[dependencies]
rustyclaw-client = { path = "../rustyclaw-client" }
rustyclawclient-cli-args = { path = "../rustyclawclient-cli-args" }
rustyclaw-protocol = { workspace = true }
reqwest-eventsource = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
bs58 = { workspace = true }

[lints]
workspace = true
