[package]
name = "rustyclawclient-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Localhost reverse proxy with transparent x402 USDC-SPL payment handling"

[lib]
name = "rustyclawclient_proxy"
path = "src/lib.rs"

[[bin]]
name = "rustyclawclient-proxy"
path = "src/main.rs"

[dependencies]
rustyclaw-client = { path = "../rustyclaw-client" }
rustyclaw-protocol = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
solana-sdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
