[package]
name = "solvela-client-cli-args"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Shared CLI argument structs and wallet loading for Solvela binaries"
categories = ["command-line-interface"]

[dependencies]
clap = { workspace = true }
solvela-client = { path = "../solvela-client", version = "0.1" }
dirs-next = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
solana-sdk = { workspace = true }

[lints]
workspace = true
