[package]
name = "solvela-client-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Localhost reverse proxy with transparent x402 USDC-SPL payment handling"

[lib]
name = "solvela_client_proxy"
path = "src/lib.rs"

[[bin]]
name = "solvela-client-proxy"
path = "src/main.rs"

[dependencies]
solvela-client = { path = "../solvela-client" }
solvela-client-cli-args = { path = "../solvela-client-cli-args" }
solvela-protocol = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
solana-sdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
