[package]
name = "solvela-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Solana-native AI agent payment client for Solvela"
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
solvela-protocol = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bip39 = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest-eventsource = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
lru = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
solana-sdk = { workspace = true }

[lints]
workspace = true
